--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/MalgoskaBou/AplikacjaPogodowa/issues"
   },
-  "homepage": "https://github.com/MalgoskaBou/AplikacjaPogodowa#readme"
+  "homepage": "https://github.com/MalgoskaBou/AplikacjaPogodowa#readme",
+  "devDependencies": {
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
+  }
 }
