--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
