--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
