--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
+  },
+  "dependencies": {
+    "is-online": "^8.2.1"
   }
 }
