--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./config/webpack.config.js",
+    "start": "node src/server.js",
+    "heroku-postbuild": "webpack -p",
+    "dev": "webpack-dev-server --config ./config/webpack.config.js",
     "prod": "webpack --config ./config/webpack.config.prod.js"
   },
   "repository": {
@@ -38,6 +40,7 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "is-online": "^8.2.1"
   }
 }
