Move server.js to root directory

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node src/server.js",
-    "build": "webpack --mode production --config ./config/webpack.config.prod.js",
+		"start": "node server.js",
+		"heroku-postbuild": "webpack --config webpack.prod.js",
 		"dev": "webpack-dev-server --config ./config/webpack.config.js",
 		"prod": "webpack --config ./config/webpack.config.prod.js"
 	},
 	"engines": {
-		"node": "12.13.1"
+		"node": "12.13.1",
+		"npm": "6.12.1"
 	},
 	"repository": {
 		"type": "git",
