--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node server.js",
-		"heroku-postbuild": "webpack --config webpack.prod.js",
+		"heroku-postbuild": "webpack --config  ./config/webpack.prod.js",
 		"dev": "webpack-dev-server --config ./config/webpack.config.js",
 		"prod": "webpack --config ./config/webpack.config.prod.js"
 	},
